--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "y",
+  "name": "store-inventory-server",
   "version": "1.0.0",
   "description": "Mobile App for Store Owners to manage their incoming and outgoing products , save important documents of sales and goods and manage all their customers and suppliers contact and provide product price management",
   "main": "index.js",
@@ -12,7 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.6",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "validator": "^13.6.0"
   }
 }
